--- a/stylesheets/viewports/_medium.scss
+++ b/stylesheets/viewports/_medium.scss
@@ -12,4 +12,16 @@
 		}
 	}	
 
+
+	[role="banner"] {
+		.btn-white {
+			border-color: #fff;
+			color: #fff;
+
+			&:hover {
+				background-color: #fff;
+				color: #000;
+			}
+		}
+	}
 }
